test_src/compiler_errors/types/binary/RightShiftFloatError3.b
class RightShiftFloatError3 {
    void test() {
        var value = 42;
        println(value >>= 14.0);
    }
}
